tests/paczka1/small_fuzzy/93227701.err
Error in line 7: h2jitv S218 85,0
Error in line 1: BxHfO A123 54,8
